Added css for app symbol

--- a/index.html
+++ b/index.html
@@ -6,8 +6,12 @@
     <link rel="stylesheet" href="show.css" />
   </head>
   <body>
-
-    <h1> Lets play tetris! </h1>
+    <div class="square">
+    </div>
+    <div class="title">
+      <h1> Lets play tetris! </h1>
+    </div>
+    <br/>
     <div class="grid">
     </div>
   </body>
